updated components style-outer container

--- a/src/app/pages/air-export/air-export.component.html
+++ b/src/app/pages/air-export/air-export.component.html
@@ -1,13 +1,14 @@
-<h1
-  style="
-    font-weight: bolder;
-    background-color: rgb(43, 255, 0);
-    text-align: center;
-  "
->
-  Air Export
-</h1>
-<div class="container">
+<div class="outerContainer">
+  <h1
+    style="
+      font-weight: bolder;
+      background-color: rgb(43, 255, 0);
+      text-align: center;
+    "
+  >
+    Air Export
+  </h1>
+
   <mat-tab-group mat-align-tabs="start">
     <mat-tab label="Air Export Dashboard">
       <app-air-export-dashboard></app-air-export-dashboard>
@@ -21,6 +22,7 @@
     </mat-tab>
   </mat-tab-group>
 </div>
+
 <button type="button" class="btn btn-link" routerLink="/home/nav/">
   Back to Mainpage
 </button>
