--- a/src/app/pages/parties/parties.component.html
+++ b/src/app/pages/parties/parties.component.html
@@ -1,21 +1,23 @@
+<div class="outerContainer">
+  <h1 style="font-weight: bolder; background-color: yellow; text-align: center">
+    Parties
+  </h1>
 
-<h1 style="font-weight: bolder; background-color: yellow; text-align: center;">Parties</h1>
+  <mat-tab-group mat-align-tabs="start">
+    <mat-tab label="Clients">
+      <app-clients></app-clients>
+    </mat-tab>
 
-<mat-tab-group mat-align-tabs="start">
- 
-  <mat-tab label="Clients">
-    <app-clients></app-clients>
-  </mat-tab>
+    <mat-tab label="Vendors">
+      <app-vendors></app-vendors>
+    </mat-tab>
 
-  <mat-tab label="Vendors">
-    <app-vendors></app-vendors>
-  </mat-tab>
-  
-  <mat-tab label="Carriers">
-    <app-carriers></app-carriers>
-  </mat-tab>
+    <mat-tab label="Carriers">
+      <app-carriers></app-carriers>
+    </mat-tab>
+  </mat-tab-group>
 
-</mat-tab-group>
-
-
-<button type="button" class="btn btn-link" routerLink="/home/nav/">Back to Mainpage</button>
+  <button type="button" class="btn btn-link" routerLink="/home/nav/">
+    Back to Mainpage
+  </button>
+</div>
