--- a/src/app/pages/reports/reports.component.scss
+++ b/src/app/pages/reports/reports.component.scss
@@ -11,3 +11,11 @@ a {
   max-width: 90%;
   margin: auto;
 }
+
+.outerContainer {
+  padding: 5px;
+  border: 1px solid #b6b6b6;
+  box-sizing: content-box;
+  max-width: 90%;
+  margin: auto;
+}
