--- a/src/app/pages/tables/hts/hts.component.html
+++ b/src/app/pages/tables/hts/hts.component.html
@@ -1,3 +1,5 @@
-<h1 style="font-weight: bolder; background-color: yellow; text-align: center">
-  Harmonized Tariff Schedule of US
-</h1>
+<div class="outerContainer">
+  <h1 style="font-weight: bolder; background-color: yellow; text-align: center">
+    Harmonized Tariff Schedule of US
+  </h1>
+</div>
