--- a/src/app/pages/air-export/air-export.component.scss
+++ b/src/app/pages/air-export/air-export.component.scss
@@ -27,3 +27,11 @@ mat-card {
   max-width: 90%;
   margin: auto;
 }
+
+.outerContainer {
+  padding: 5px;
+  border: 1px solid #b6b6b6;
+  box-sizing: content-box;
+  max-width: 90%;
+  margin: auto;
+}
