--- a/src/app/pages/air-import/air-import.component.scss
+++ b/src/app/pages/air-import/air-import.component.scss
@@ -1,7 +1,7 @@
-:host{
+:host {
   font-size: large;
   font-style: italic;
-  color:blue
+  color: blue;
 }
 
 .my-tab-class {
@@ -16,19 +16,32 @@
   width: 100%;
 }
 
-#air td, #air th {
+#air td,
+#air th {
   border: 1px solid #ddd;
   padding: 8px;
 }
 
-#air tr:nth-child(even){background-color: #f2f2f2;}
+#air tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
 
-#air tr:hover {background-color: #ddd;}
+#air tr:hover {
+  background-color: #ddd;
+}
 
 #customers th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #04AA6D;
+  background-color: #04aa6d;
   color: white;
+}
+
+.outerContainer {
+  padding: 5px;
+  border: 1px solid #b6b6b6;
+  box-sizing: content-box;
+  max-width: 90%;
+  margin: auto;
 }
