--- a/src/app/pages/sea-ams/sea-ams.component.html
+++ b/src/app/pages/sea-ams/sea-ams.component.html
@@ -1,21 +1,23 @@
-<h1 style="font-weight: bolder; background-color: yellow; text-align: center;">Sea AMS</h1>
+<div class="outerContainer">
+  <h1 style="font-weight: bolder; background-color: yellow; text-align: center">
+    Sea AMS
+  </h1>
 
-<mat-tab-group mat-align-tabs="start" style="color:pink;">
-  <mat-tab label="Sea AMS Dashboard" >
-    <app-sea-ams-dashboard></app-sea-ams-dashboard>
-  </mat-tab>
+  <mat-tab-group mat-align-tabs="start" style="color: pink">
+    <mat-tab label="Sea AMS Dashboard">
+      <app-sea-ams-dashboard></app-sea-ams-dashboard>
+    </mat-tab>
 
-  <mat-tab label="Sea AMS Summary" >
-    <app-ams-summary></app-ams-summary>
-  </mat-tab>
+    <mat-tab label="Sea AMS Summary">
+      <app-ams-summary></app-ams-summary>
+    </mat-tab>
 
-
-  <mat-tab label="New Sea AMS">
+    <mat-tab label="New Sea AMS">
       <app-ams-detail></app-ams-detail>
-  </mat-tab>
+    </mat-tab>
+  </mat-tab-group>
 
-
-</mat-tab-group>
-
-
-<button type="button" class="btn btn-link" routerLink="/home/nav/">Back to Mainpage</button>
+  <button type="button" class="btn btn-link" routerLink="/home/nav/">
+    Back to Mainpage
+  </button>
+</div>
