--- a/src/app/pages/tables/hts/hts.component.scss
+++ b/src/app/pages/tables/hts/hts.component.scss
@@ -1,3 +1,11 @@
 .full-width-table {
   width: 100%;
 }
+
+.outerContainer {
+  padding: 5px;
+  border: 1px solid #b6b6b6;
+  box-sizing: content-box;
+  max-width: 90%;
+  margin: auto;
+}
