--- a/src/app/pages/tables/tables.component.scss
+++ b/src/app/pages/tables/tables.component.scss
@@ -8,5 +8,14 @@ a {
 }
 
 button {
-  margin: 20px 20px 20px 20px ;
+  margin: 20px 20px 20px 20px;
+}
+
+.outerContainer {
+  padding: 5px;
+  border: 1px solid #b6b6b6;
+  box-sizing: content-box;
+  max-width: 90%;
+  margin: auto;
+  min-height: 900px;
 }
