--- a/src/app/pages/track-and-trace/track-and-trace.component.scss
+++ b/src/app/pages/track-and-trace/track-and-trace.component.scss
@@ -1,3 +1,11 @@
 .container {
   min-height: 900px;
 }
+
+.outerContainer {
+  padding: 5px;
+  border: 1px solid #b6b6b6;
+  box-sizing: content-box;
+  max-width: 90%;
+  margin: auto;
+}
