Updated grid components

--- a/src/app/pages/air-import/ai-grid/ai-grid.component.html
+++ b/src/app/pages/air-import/ai-grid/ai-grid.component.html
@@ -1,12 +1,13 @@
 <ag-grid-angular
-    style="width: auto; height: 700px;"
-    class="ag-theme-alpine"
-    [rowData]="rowData"
-    [columnDefs]="columnDefs"
-    [pagination]=true
-    [paginationPageSize]=10
-    [animateRows]=true
-    [sideBar]="true"
-    [rowSelection]="rowSelection"
+  style="width: auto; height: 700px"
+  class="ag-theme-alpine"
+  [rowData]="rowData"
+  [columnDefs]="columnDefs"
+  [defaultColDef]="defaultColDef"
+  [pagination]="true"
+  [paginationPageSize]="10"
+  [animateRows]="true"
+  [sideBar]="true"
+  [rowSelection]="rowSelection"
 >
 </ag-grid-angular>
