--- a/src/app/pages/customs-brokerage/entry-grid/entry-grid.component.html
+++ b/src/app/pages/customs-brokerage/entry-grid/entry-grid.component.html
@@ -1,17 +1,14 @@
-
 <ag-grid-angular
-    style="width: auto; height: 700px;"
-    class="ag-theme-alpine"
-    [rowData]="rowData"
-    [columnDefs]="columnDefs"
-    [pagination]=true
-    [paginationPageSize]=10
-    [animateRows]=true
-    [sideBar]="true"
-    [colWidth]="120"
-    [rowSelection]="rowSelection"
-    (rowClicked)="onGridReady($event)"
-
+  style="width: auto; height: 700px"
+  class="ag-theme-alpine"
+  [rowData]="rowData"
+  [columnDefs]="columnDefs"
+  [pagination]="true"
+  [paginationPageSize]="20"
+  [animateRows]="true"
+  [sideBar]="true"
+  [colWidth]="120"
+  [rowSelection]="rowSelection"
+  (rowClicked)="onRowClicked($event)"
 >
 </ag-grid-angular>
-
