--- a/src/app/pages/isf/shipment/shipment.component.html
+++ b/src/app/pages/isf/shipment/shipment.component.html
@@ -1,108 +1,110 @@
 <h1>Shipment Info</h1>
 <div>
-
-  <table class="container-fluid example-full-width" fxLayout="column" fxFlex="30" fxLayoutAlign="space-between start">
+  <table
+    class="container-fluid example-full-width"
+    fxLayout="column"
+    fxFlex="30"
+    fxLayoutAlign="space-between start"
+  >
     <tr>
       <td>
-        <mat-form-field  appearance="fill">
+        <mat-form-field appearance="fill">
           <mat-label>ISF No.</mat-label>
-          <input matInput id="ISFNo" type="text" >
+          <input matInput id="ISFNo" type="text" />
         </mat-form-field>
       </td>
 
-
-    <td>
-      <mat-form-field  appearance="fill">
-        <mat-label>ISF</mat-label>
-        <mat-select [(ngModel)]="selectedValue2" name="isf">
-          <mat-option *ngFor =" let isf of isfTypes" [value]="isf.value">
-            {{ isf.value}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-
-    </td>
-
-    <td>
-      <mat-form-field  appearance="fill">
-        <mat-label>MOT</mat-label>
-        <mat-select [(ngModel)]="selectedValue3" name="mot">
-          <mat-option *ngFor =" let mot of mots" [value]="mot.value">
-            {{ mot.value}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </td>
-
-    <td>
-        <mat-form-field  appearance="fill">
-          <mat-label>Shpt Type.</mat-label>
-          <mat-select [(ngModel)]="selectedValue" name="shipment">
-            <mat-option *ngFor =" let shipment of shipTypes" [value]="shipment.value">
-              {{ shipment.value}}
+      <td>
+        <mat-form-field appearance="fill">
+          <mat-label>ISF</mat-label>
+          <mat-select [(ngModel)]="selectedValue2" name="isf">
+            <mat-option *ngFor="let isf of isfTypes" [value]="isf.value">
+              {{ isf.value }}
             </mat-option>
           </mat-select>
         </mat-form-field>
       </td>
 
       <td>
-          <mat-form-field  appearance="fill">
-            <mat-label>Action</mat-label>
-            <mat-select [(ngModel)]="selectedValue1" name="action">
-              <mat-option *ngFor =" let action of actions" [value]="action.value">
-                {{ action.value}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>MOT</mat-label>
+          <mat-select [(ngModel)]="selectedValue3" name="mot">
+            <mat-option *ngFor="let mot of mots" [value]="mot.value">
+              {{ mot.value }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
       </td>
-
-   <tr>
       <td>
-        <mat-form-field  appearance="fill">
-          <mat-label>AMS B/L</mat-label>
-          <input matInput id="AmsBL" type="text" >
+        <mat-form-field appearance="fill">
+          <mat-label>Shpt Type.</mat-label>
+          <mat-select [(ngModel)]="selectedValue" name="shipment">
+            <mat-option
+              *ngFor="let shipment of shipTypes"
+              [value]="shipment.value"
+            >
+              {{ shipment.value }}
+            </mat-option>
+          </mat-select>
         </mat-form-field>
       </td>
 
-    <td>
-      <mat-form-field  appearance="fill">
-        <mat-label>Add'l AMS B/L #1</mat-label>
-        <input matInput id="Add1AmsBL" type="text" >
-      </mat-form-field>
-    </td>
+      <td>
+        <mat-form-field appearance="fill">
+          <mat-label>Action</mat-label>
+          <mat-select [(ngModel)]="selectedValue1" name="action">
+            <mat-option *ngFor="let action of actions" [value]="action.value">
+              {{ action.value }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </td>
+    </tr>
 
-    <td>
-      <mat-form-field  appearance="fill">
-        <mat-label>Master B/L #</mat-label>
-        <input matInput id="MasterBL" type="text" >
-      </mat-form-field>
-    </td>
+    <tr>
+      <td>
+        <mat-form-field appearance="fill">
+          <mat-label>AMS B/L</mat-label>
+          <input matInput id="AmsBL" type="text" />
+        </mat-form-field>
+      </td>
 
-    <td>
-      <mat-form-field  appearance="fill">
-        <mat-label>File No</mat-label>
-        <input matInput id="FileNo" type="text" >
-      </mat-form-field>
-    </td>
+      <td>
+        <mat-form-field appearance="fill">
+          <mat-label>Add'l AMS B/L #1</mat-label>
+          <input matInput id="Add1AmsBL" type="text" />
+        </mat-form-field>
+      </td>
 
-    <td>
-      <mat-form-field  appearance="fill">
-        <mat-label>Customer Ref #</mat-label>
-        <input matInput id="CustRefNo" type="text" >
-      </mat-form-field>
-    </td>
-  </tr>
+      <td>
+        <mat-form-field appearance="fill">
+          <mat-label>Master B/L #</mat-label>
+          <input matInput id="MasterBL" type="text" />
+        </mat-form-field>
+      </td>
 
-  <tr>
-    <td>
-      <mat-form-field  appearance="fill">
-        <mat-label>Importer ID #</mat-label>
-        <input matInput id="ImporterID" type="text" >
-      </mat-form-field>
-    </td>
+      <td>
+        <mat-form-field appearance="fill">
+          <mat-label>File No</mat-label>
+          <input matInput id="FileNo" type="text" />
+        </mat-form-field>
+      </td>
 
-  </tr>
+      <td>
+        <mat-form-field appearance="fill">
+          <mat-label>Customer Ref #</mat-label>
+          <input matInput id="CustRefNo" type="text" />
+        </mat-form-field>
+      </td>
+    </tr>
 
+    <tr>
+      <td>
+        <mat-form-field appearance="fill">
+          <mat-label>Importer ID #</mat-label>
+          <input matInput id="ImporterID" type="text" />
+        </mat-form-field>
+      </td>
+    </tr>
   </table>
-
 </div>
