--- a/src/app/pages/air-ams/ams-detail/ams-detail.component.html
+++ b/src/app/pages/air-ams/ams-detail/ams-detail.component.html
@@ -244,20 +244,41 @@
         <mat-form-field appearance="fill">
           <mat-label>Shipper Code</mat-label>
           <input
+            type="text"
+            matInput
+            placeholder="Shipper Code"
+            formControlName="shipperCode"
+            [matAutocomplete]="auto"
+          />
+          <mat-autocomplete #auto="matAutocomplete">
+            <mat-option
+              *ngFor="let cust of cust$ | async"
+              [value]="cust.custName"
+            >
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+
+        <!-- <mat-form-field appearance="fill">
+          <mat-label>Shipper Code</mat-label>
+          <input
             #searchBox
             id="search-box"
             (input)="searchCust(searchBox.value)"
             matInput
             placeholder="Shipper Code"
             formControlName="shipperCode"
+            [matAutocomplete]="auto"
           />
-          <mat-option
-            matNativeControl
-            *ngFor="let cust of cust$ | async"
-            [value]="cust.custName"
-          >
-          </mat-option>
-        </mat-form-field>
+          <mat-autocomplete #auto="matAutocomplete">
+            <mat-option
+              matNativeControl
+              *ngFor="let cust of cust$ | async"
+              [value]="cust.custName"
+            >
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field> -->
 
         <!-- <mat-form-field appearance="fill">
           <mat-label>Shipper Code</mat-label>
